<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:paddingTop="0dp">

        <ImageButton
            android:id="@+id/gridBtn"
            android:layout_width="199dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#FFC6C2C2"
            android:scaleX="0.95"
            android:scaleY="0.8"
            app:srcCompat="@drawable/grid" />

        <ImageButton
            android:id="@+id/listBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#e1dddd"
            android:scaleX="0.95"
            android:scaleY="0.8"
            app:srcCompat="@drawable/list" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:background="#FFF"
        android:id="@+id/rc_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>
</LinearLayout>