...
        android:layout_marginRight="10dp" />

<Button
    android:id="@+id/ok_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="OK"
    tools:layout_constraintRight_creator="1"
    tools:layout_constraintBottom_creator="1"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    tools:layout_constraintLeft_creator="1"
    android:layout_marginBottom="54dp"
...
